tests/snapshots/apply__test_apply_verbose_twice__mixed_walk_sorted.snap
---
source: tests/apply.rs
expression: captured
---
replaced <root>/target/a.txt
deployed <root>/target/b.txt
skipped <root>/target/c.txt
deployed 1, replaced 1, skipped 1
