tests/snapshots/apply__test_apply_verbose_twice__no_op_clean_up.snap
---
source: tests/apply.rs
expression: captured
---
replaced <root>/target/a.txt
replaced <root>/target/sub/b.txt
deployed 0, replaced 2, skipped 0, removed 0, pruned 0
