tests/snapshots/apply__test_apply_verbose_twice__relinquished_not_printed.snap
---
source: tests/apply.rs
expression: captured
---
deployed 0, replaced 0, skipped 0, removed 0, pruned 0
