tests/snapshots/apply__test_apply_verbose_twice__replaced_lines.snap
---
source: tests/apply.rs
expression: captured
---
replaced <root>/target/a.txt
replaced <root>/target/sub/b.txt
deployed 0, replaced 2, skipped 0
