tests/snapshots/apply__test_apply_verbose_twice__skipped_lines.snap
---
source: tests/apply.rs
expression: captured
---
skipped <root>/target/a.txt
deployed 0, replaced 0, skipped 1
